--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2012-08-02  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Avoid needless autoheader after autogen.sh.
+	* src/stamp-h.in: Remove from bzr repository; no longer needed there.
+	* .bzrignore: Add it.
+	* autogen.sh: Create it.
+
 2012-08-01  Glenn Morris  <rgm@gnu.org>
 
 	* configure.ac (DOS_NT, MSDOS): New system type templates.
