--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-02  Glenn Morris  <rgm@gnu.org>
+
+	* nsterm.m (ns_exec_path, ns_load_path): Use SEPCHAR rather than
+	hard-coding the path separator.
+
 2012-08-01  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Use "ASET (a, i, v)" rather than "AREF (a, i) = v".
