--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-02  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Port to Solaris 8.
+	* syswait.h (WRETCODE): Remove, consistently with ../configure.ac.
+
 2012-08-02  Glenn Morris  <rgm@gnu.org>
 
 	* nsterm.m (ns_exec_path, ns_load_path): Use SEPCHAR rather than
