--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-02  Glenn Morris  <rgm@gnu.org>
+
+	* emacs-lisp/authors.el (authors-renamed-files-alist): Add ms-w32.h.
+
 2012-08-02  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Obsolete alias inactivate-current-input-method-function (Bug#10150).
