--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-08-02  Glenn Morris  <rgm@gnu.org>
+
+	* s/ms-w32.h: Move to ../nt/inc.
+	* makefile.w32-in (TAGS, TAGS-gmake, MS_W32_H):
+	Update for new ms-w32.h location.
+
 2012-08-02  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Port to Solaris 8.
