--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-08-02  Glenn Morris  <rgm@gnu.org>
 
+	* make-dist: Remove src/s.
+
 	* lib/makefile.w32-in (MS_W32_H): Update for new ms-w32.h location.
 
 2012-08-02  Paul Eggert  <eggert@cs.ucla.edu>
