--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,10 @@
+2012-08-02  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Use C99-style 'extern inline' if available.
+	* config.nt: Sync with autogen/config.in.
+	(_GL_INLINE, _GL_EXTERN_INLINE, _GL_INLINE_HEADER_BEGIN)
+	(_GL_INLINE_HEADER_END): New macros.
+
 2012-08-02  Glenn Morris  <rgm@gnu.org>
 
 	* inc/ms-w32.h: Move here from ../src/s.
