--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,6 +1,8 @@
 2012-08-02  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* xfaces.c (face_at_buffer_position): Remove unused local.
+	(face_at_buffer_position, face_for_overlay_string):
+	Don't assume buffer size fits in 'int'.
 
 	Use C99-style 'extern inline' if available.
 	* buffer.h (BUFFER_INLINE):
