--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,8 +1,7 @@
 2012-08-02  Paul Eggert  <eggert@cs.ucla.edu>
 
-	* xfaces.c (face_at_buffer_position): Remove unused local.
-	(face_at_buffer_position, face_for_overlay_string):
-	Don't assume buffer size fits in 'int'.
+	* xfaces.c (face_at_buffer_position, face_for_overlay_string):
+	Don't assume buffer size fits in 'int'.  Remove unused local.
 
 	Use C99-style 'extern inline' if available.
 	* buffer.h (BUFFER_INLINE):
