--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,12 @@
 2012-08-02  Paul Eggert  <eggert@cs.ucla.edu>
 
+	Fix macroexp crash on Windows with debugging (Bug#12118).
+	* lisp.h (ASET) [ENABLE_CHECKING]: Ignore ARRAY_MARK_FLAG when
+	checking subscripts; problem introduced with the recent
+	"ASET (a, i, v)" rather than "AREF (a, i) = v" patch.
+	(ARRAY_MARK_FLAG): Now a macro as well as a constant,
+	since it's used in non-static inline functions now.
+
 	* xfaces.c (face_at_buffer_position, face_for_overlay_string):
 	Don't assume buffer size fits in 'int'.  Remove unused local.
 
