--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-03  Chong Yidong  <cyd@gnu.org>
+
+	* sort.el (sort-regexp-fields): Doc fix.
+
 2012-08-03  Tassilo Horn  <tsdh@gnu.org>
 
 	* textmodes/reftex.el (reftex-compile-variables): Make keyvals
