--- a/etc/NEWS
+++ b/etc/NEWS
@@ -144,6 +144,9 @@ local variables on remote hosts.
 ** `insert-char' is now a command, and `ucs-insert' an obsolete alias
 for it.
 
+** The entry for PCL-CVS has been removed from the Tools menu.
+The PCL-CVS commands are still available via the keyboard.
+
 
 * Editing Changes in Emacs 24.2
 
