--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-03  Eli Zaretskii  <eliz@gnu.org>
+
+	* ntlib.c (lstat): New function, calls 'stat'.
+
 2012-08-02  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Use C99-style 'extern inline' if available.
