--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-03  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in (LOCAL_FLAGS): Remove WINDOWSNT and DOS_NT,
+	they are always defined in config.h.
+
 2012-08-03  Eli Zaretskii  <eliz@gnu.org>
 
 	* ntlib.c (lstat): New function, calls 'stat'.
