* simple.el (list-processes--refresh): For a server use :host or :local as the address.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-04  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* simple.el (list-processes--refresh): For a server use :host or
+	:local as the address.
+
 2012-08-04  Michal Nazarewicz  <mina86@mina86.com>  (tiny change)
 
 	* lisp/mpc.el: Support password in host argument.
