--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-08-04  Eli Zaretskii  <eliz@gnu.org>
+
+	* xfns.c (x_set_menu_bar_lines): Fix compilation error in
+	--with-x-toolkit=no builds.
+	Reported by Carsten Mattner <carstenmattner@gmail.com>.
+
 2012-08-04  Chong Yidong  <cyd@gnu.org>
 
 	* syntax.c (Fmodify_syntax_entry): Doc fix.
