Docfix for kill-buffer-hook and others.
* lisp/files.el (kill-buffer-hook): Provide a defvar.

* src/term.c (Vsuspend_tty_functions, Vresume_tty_functions):
* src/frame.c (Vdelete_frame_functions):
* src/emacs.c (Vkill_emacs_hook): Doc fix.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-05  Chong Yidong  <cyd@gnu.org>
+
+	* files.el (kill-buffer-hook): Provide a defvar.
+
 2012-08-05  Glenn Morris  <rgm@gnu.org>
 
 	* eshell/esh-ext.el (eshell/addpath):
